[gd_scene load_steps=6 format=3 uid="uid://dgxptbo5nijcb"]

[ext_resource type="Script" path="res://Scripts/levelSelect.gd" id="1_3d3td"]
[ext_resource type="Texture2D" uid="uid://cxv30nv1yg6o1" path="res://Images/Galaxy Background.png" id="2_iakma"]
[ext_resource type="Texture2D" uid="uid://by2scfuf7nhr8" path="res://Images/Homeworld.png" id="3_tpxql"]
[ext_resource type="Texture2D" uid="uid://b5inx1vwd67mq" path="res://Images/Earthlike.png" id="4_ipx08"]
[ext_resource type="Texture2D" uid="uid://d0xpyefl86efh" path="res://Images/PurplePlanet.png" id="5_wtdgh"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_3d3td")

[node name="GalaxyBackground" type="Sprite2D" parent="."]
position = Vector2(938, 501)
scale = Vector2(12.19, 12.19)
texture = ExtResource("2_iakma")

[node name="BackButton" type="Button" parent="."]
offset_left = 706.0
offset_top = 795.0
offset_right = 1180.0
offset_bottom = 890.0
theme_override_font_sizes/font_size = 50
text = "Back to Main Menu"

[node name="Homeworld" type="Sprite2D" parent="."]
position = Vector2(954, 201)
scale = Vector2(3.13, 3.13)
texture = ExtResource("3_tpxql")

[node name="Homeworld Farm" type="Button" parent="."]
offset_left = 734.0
offset_top = 162.0
offset_right = 1166.0
offset_bottom = 239.0
theme_override_font_sizes/font_size = 50
text = "Homeworld Farm"

[node name="Earthlike" type="Sprite2D" parent="."]
position = Vector2(435, 550)
scale = Vector2(3.04, 3.04)
texture = ExtResource("4_ipx08")

[node name="Earth" type="Button" parent="."]
offset_left = 220.0
offset_top = 524.0
offset_right = 652.0
offset_bottom = 601.0
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "Earth"

[node name="PurplePlanet" type="Sprite2D" parent="."]
position = Vector2(1521, 560)
scale = Vector2(2.625, 2.625)
texture = ExtResource("5_wtdgh")

[node name="Planet 2" type="Button" parent="."]
offset_left = 1305.0
offset_top = 524.0
offset_right = 1737.0
offset_bottom = 601.0
theme_override_font_sizes/font_size = 50
text = "Planet 2"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Homeworld Farm" to="." method="_on_homeworld_farm_pressed"]
[connection signal="pressed" from="Earth" to="." method="_on_earth_pressed"]
[connection signal="pressed" from="Planet 2" to="." method="_on_planet_2_pressed"]
